# mc_emergency_button

./: .clang-format-common.sh  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
emergency_button/: CMakeLists.txt
emergency_button/include/emergency_button/: EmergencyButton.h  WiredEmergencyButton.h  WirelessEmergencyButton.h
emergency_button/src/: CMakeLists.txt  WiredEmergencyButton.cpp  WirelessEmergencyButton.cpp  emergency_button.cpp  usbio.c  usbio.h  usbio_private.h
plugin/: CMakeLists.txt  README.md  vcpkg.json
plugin/etc/: EmergencyButtonPlugin.in.yaml
plugin/src/: EmergencyButtonData.h  EmergencyButtonPlugin.cpp  EmergencyButtonPlugin.h  EmergencyButtonServer.cpp
plugin/tests/etc/: mc_rtc.yaml
xbee/: button.py  coordinator.py
